Fix navbar z-index to prevent close on 1st click

--- a/src/layout/Header/header.scss
+++ b/src/layout/Header/header.scss
@@ -9,7 +9,7 @@
 
   @include fixed;
 
-  z-index: 10;
+  z-index: 30;
   display: flex;
   align-items: center;
   width: 100%;
