--- a/src/layout/Navbar/Navbar.scss
+++ b/src/layout/Navbar/Navbar.scss
@@ -8,7 +8,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 3;
+  z-index: 20;
   display: flex;
   height: 100%;
   border-right: $tertiaryBorder;
